
   * khmer/__init__.py: pass IOError through extract_countinghash_info and
   extract_hashbits_info so that file-does-not-exist errors are correctly
   reported; fixed FP rate reporting.
   * khmer/khmer_args.py: removed environment variable override for hash size
   defaults; added -M/--max_memory_usage, and functions create_nodegraph()
   and create_countgraph().
   * scripts/{abundance-dist-single.py,count-overlap.py,do-partition.py,
   filter-abund-single.py,find-knots.py,load-into-counting.py,
   make-initial-stoptags.py,normalize-by-median.py,trim-low-abund.py}: replaced
   counting hash/hashbits creation with new khmer_args create* functions.
   * oxli/build_graph.py,sandbox/{sweep-files.py,sweep-reads.py},
   scripts/{count-overlap.py,do-partition.py,},khmer/khmer_args.py:
   changed hashtype over to 'nodegraph' and 'bitgraph' in call to
   report_on_config.

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: refactor CPython layer so that KHashtable
   is at base of CountingHash and Hashbits.
   * lib/hashbits.hh: add n_entries() function from Hashtable::n_entries.
   * lib/hashtable.hh: add several virtual functions to Hashtable that exist in
   CountingHash and Hashbits.

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/{__init__.py,_khmermodule.cc},lib/labelhash.{cc,hh},
   lib/{hashtable,khmer}.hh: changed LabelHash to be a "friend" of Hashtable,
   rather than a subclass; allowed initialization with either a CountingHash
   or a Hashbits; added 'graph' attribute to the Python object to store a
   reference to host object.
   * lib/labelhash.{cc,hh}: changed TagPtr maps to Tag maps to fix disastrous
   bug.
   * lib/labelhash.{cc,hh}: added save/load_tags_and_labels functions for
   saving and loading labels.
   * tests/test_labelhash.py: removed unnecessary tests; added tests for save
   and load.
   * sandbox/sweep-reads.py: updated with LabelHash changes.

2015-05-26  Kevin Murray  <spam@kdmurray.id.au>
